poke/testsuite/poke.pkl/load-diag-2.pk
/* { dg-do compile } */

defvar foo = 10;
load "___foobar___.pk"; /* { dg-error "" } */
defvar bar = 20;
